fix: fix line text wrap in inspector selection_info

--- a/core/inspector/css/inspector.less
+++ b/core/inspector/css/inspector.less
@@ -79,6 +79,14 @@
 				font-size: 1.12rem;
 				text-align: center;
 
+				.selection_info_label {
+					display: inline-block;
+					max-width: 88.5%;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+				}
+
 				.button {
 					cursor: pointer;
 					float: right;
